apply overflow method

--- a/src/components/organisms/Expertise.css
+++ b/src/components/organisms/Expertise.css
@@ -11,6 +11,8 @@
 .block1{
   position: relative;
   width: 90%;
+  max-height: 60%;
+  overflow: auto;
   /* max-width: 100%; */
   margin: 2rem ;
   padding: 0rem 2rem;
@@ -19,12 +21,18 @@
   color: #fff;
   /* background: #fff; */
   border-left: 4px solid darkcyan;
-  &::before{
+  /* &::before{
     content:'<blockquote>';
+    max-height: 90%;
     top: -2rem;
   }
   &::after{
     content: '</blockquote>';
+    max-height: 90%;
     bottom: -2rem;
-  }
+  } */
 }
+
+
+
+/* cf https://codepen.io/Paolo-Duzioni/pen/RKNwXJ */
