--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 
 .App {
+  background-image: linear-gradient(to bottom, #1d2d3c 0%, #15202b 50%, #0d131a 100%);
   text-align: center;
   font-family: 'Hanalei Fill', cursive;
  }
@@ -27,7 +28,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #282c34;  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
