--- a/src/components/atoms/ScrollButton/ScrollButton.css
+++ b/src/components/atoms/ScrollButton/ScrollButton.css
@@ -59,14 +59,14 @@ p {
 	top: 29%;
 	}
 }
- .scroll-btn {
+ .scroll-button {
 	display: block;
 	position: absolute;
 	left: 0;
 	right: 0;
 	text-align: center;
 }
-.scroll-btn > * {
+.scroll-button > * {
 	display: inline-block;
 	line-height: 18px;
 	font-size: 13px;
@@ -76,19 +76,19 @@ p {
   font-family: 'CustomFont';
 	letter-spacing: 2px;
 }
-.scroll-btn > *:hover,
-.scroll-btn > *:focus,
-.scroll-btn > *.active {
+.scroll-button > *:hover,
+.scroll-button > *:focus,
+.scroll-button > *.active {
 	color: #ffffff;
 }
-.scroll-btn > *:hover,
-.scroll-btn > *:focus,
-.scroll-btn > *:active,
-.scroll-btn > *.active {
+.scroll-button > *:hover,
+.scroll-button > *:focus,
+.scroll-button > *:active,
+.scroll-button > *.active {
 	opacity: 0.8;
 	filter: alpha(opacity=80);
 }
-.scroll-btn .mouse {
+.scroll-button .mouse {
 	position: relative;
 	display: block;
 	width: 35px;
@@ -100,7 +100,7 @@ p {
 	border: 3px solid white;
 	border-radius: 23px;
 }
-.scroll-btn .mouse > * {
+.scroll-button .mouse > * {
 	position: absolute;
 	display: block;
 	top: 29%;
