--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,21 @@
   }
 }
 
+body, html {
+  height: 100%;
+  margin: 0;
+  background-color: #0d131a;
+}
 
 .App {
-  background-image: linear-gradient(to bottom, #1d2d3c 0%, #15202b 50%, #0d131a 100%);
+  background-image: linear-gradient(
+  to bottom,
+  #1d2d3c 0%,
+  #192936 25%,
+  #15202b 50%,
+  #111a23 75%,
+  #0d131a 100%
+ );
   text-align: center;
   font-family: 'Hanalei Fill', cursive;
  }
